add section 5.1 to report

--- a/Report/chapter05--design-and-implementation.tex
+++ b/Report/chapter05--design-and-implementation.tex
@@ -22,6 +22,14 @@ A good report considers alternative options for key decisions and includes sound
 
 \section{Architecture}
 \label{sect:architecture}
-\begin{expectations}
-Add other sections and sub-sections as necessary.
-\end{expectations}
+
+Since our main stakeholders are students, we decided to base our design decisions on what would attract students to our website. Our colour palette was decided early on, and we focused on a gender neutral, yet colourful and engaging design. Simplicity was something that the entire team wanted; as students, we know how difficult it is to navigate cluttered and confusing websites. Due to this, we were encouraged to ensure that the focus remained on the actual studying and not an immense overload of things to explore. The Login and Signup pages were created to mirror each other, with a straightforward UI and clear input fields. Any errors are repeated back to the user to ensure a smooth login/signup process. After the user logs in, they are directed to the main Dashboard page, where there is a ‘mini version’ of each of the features. This way, the user gets an immediate idea of the overview of features, without getting overwhelmed. If they wish to ‘expand’ the feature, they can simply click on the relevant icon (e.g. a simplified calendar icon, where if you click it, it brings you to a dedicated calendar page with multiple interactive features you can use). Again, with the Group-Study page, we retained a simplified approach. As mentioned before, this is due to the possibility that the user may become distracted if the UI is too cluttered. This idea is reflected in our colour scheme also, with the palette containing subtle and light colours that are easy on the eyes.
+
+\section{Implementation Details}
+\label{sect:implementation-details}
+
+\section{Alternative Considerations}
+\label{sect:alternative-considerations}
+
+\section{Changes During Development}
+\label{sect:changes-during-development}
