Add Prapti's Report Section

--- a/Report/chapter02--objectives-and-stakeholders.tex
+++ b/Report/chapter02--objectives-and-stakeholders.tex
@@ -22,6 +22,17 @@ The section headers below provide a suggested structure.  You should feel free t
 
 \section{Stakeholder}
 \label{sect:stakeholder}
+\begin{length}
+    1. Students (Primary Stakeholders):  
+   - Impact: They benefit directly from improved academic performance, enhanced understanding of subjects, and increased motivation through collaborative learning.  
+   - Age Group: The platform is designed to accommodate students of all age groups, from school to university level.
+    2. Platform Developers and Administrators: 
+   - Impact: They are responsible for maintaining the website's functionality, ensuring data security, and enhancing user experience. Their work directly influences user satisfaction and engagement.  
+
+\end{length}
 
 \subsection{Stakeholder analysis}
 \subsection{Key stakeholders}
+\begin{length}
+    The project's success relies on meeting the needs of each stakeholder group. By focusing on students as the primary users, the platform is designed to be intuitive and engaging. In addition, feedback loops from these users will be essential for continuous improvement.This systematic approach to identifying objectives and understanding stakeholder impact ensures that the project remains user-focused and goal-oriented.
+\end{length}
