--- a/Report/chapter04--project-management.tex
+++ b/Report/chapter04--project-management.tex
@@ -25,3 +25,27 @@ There is no one best way of organising this content.  One approach is to cover d
 
 There is also no minimum or maximum number of issues to cover.  Cover what is more important in the depth necessary to do the topic justice.
 \end{expectations}
+
+\section{Project Management Approaches}
+\label{sect: Project Management Approaches}
+\begin{length}
+    Our team adopted an iterative cycle for project management, where tasks were assigned every Monday, progress was reviewed every Friday, and tasks were completed, integrated and reassigned the following Monday. This approach aligns with the principles of Agile Devlopment Process.
+\end{length}
+
+\section{Team Workflow and Decision-Making}
+\label{sect: Team Workflow and Decision-Making}
+\begin{length}
+    We began by brainstorming the list of features we planned to include and determining which would be feasible within the timeframe. The weekly cycles, following Agile methodology, facilitated regular feedback and promoted a continuous iterative process, allowing us to adapt efficiently to challenges and changing requirements. To support this process, we used Trello, where new tasks were assigned.
+\end{length}
+
+\section{Reflection on Effectiveness}
+\label{sect: Reflection on Effectiveness}
+\begin{length}
+    The weekly cycles facilitated regular feedback and promoted a continuous iterative process, allowing us to adapt efficiently to challenges and changing requirements. This approach ensured accountability and maintained team coordination, as progress was consistently monitored and discussed. Additionally, the regular review meetings provided opportunities for reflection and improvement, fostering a culture of continuous enhancement.
+
+    Our choice of this approach was influenced by Agile project management theory, which emphasises adaptability, iterative progress, and stakeholder collaboration. By incorporating elements of Scrum—such as iterative cycles and progress reviews—while maintaining flexibility, we effectively balanced structure and adaptability. This systematic approach enabled us to stay aligned with project goals while remaining responsive to new insights and challenges.
+
+    Overall, the iterative cycle proved effective in maintaining team engagement and productivity. However, a more structured Scrum framework, including defined roles (e.g., Scrum Master, Product Owner) and daily stand-ups, could potentially have enhanced communication and problem-solving efficiency. This reflection highlights the importance of adapting project management strategies to the team’s evolving needs and project requirements.
+
+    Our website is designed to facilitate group revision and study sessions, enabling students to collaborate effectively and enhance their academic performance. The primary objective of the project is to provide a platform that fosters a supportive learning community, encouraging peer-to-peer interaction and knowledge sharing.
+\end{length}
