Actual Cleanup Intro

--- a/Report/chapter01--introduction.tex
+++ b/Report/chapter01--introduction.tex
@@ -1,25 +1,17 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
-\defaultInstructions
+Our project, ‘The Study Spot’, is a virtual study space that students can use to study together with friends.
 
-\begin{expectations}
-A good introduction gives the reader a good idea of what the project is about in the shortest amount of text.  A reader should be able to get through this chapter very quickly and decide whether this project is relevant to their interests.
-\begin{itemize}
-\item A summary of the overriding business objective of the application.  Explain what the client, the end-users of your application, or the organisation deploying it would gain from the application.  Explain this value from the perspective of the client's or users' world, not from your perspective as a developer.   Do not list features, requirements, or specifications here.  The software is a means to an end, not the objective in itself.
-\item A statement of the type of system you built, including the platforms on which it can be used, and the technology stack used to build it.
-\end{itemize}
-This chapter does not require any sections of subsections.  In many projects, two short paragraphs will be enough.  However, you can use more if the objective cannot be explained in a single paragraph.  Note, though, that you will be developing the objectives further in the next chapter.
-
-\end{expectations}
-
-\begin{length}
-A single page should be sufficient for this chapter.  More than two pages is too long.
-\end{length}
-
- Our project ‘The Study Spot’ is a virtual study space that students can use to study together with friends.
-Our primary goal is to enhance student productivity and collaboration by providing features such as creating virtual study rooms, easy sharing of documents, chat rooms, rewards and shared to-do lists.
+Our primary goal is to enhance student productivity and collaboration by providing features such as creating virtual study rooms, easy sharing of documents, chat rooms, rewards, and shared to-do lists. 
 
 By fostering an interactive and organised study environment, our application will help users maintain focus and subsequently enhance their learning experience.
 
-The end-users - students - will gain from improved time management, healthy competition and access to a shared study environment, making their study sessions more efficient and enjoyable.
+The end-users, students, will gain from improved time management, healthy competition, and access to a shared study environment, making their study sessions more efficient and enjoyable.
+
+\subsection*{Unique Selling Point (USP)}
+During our research, we identified a gap in the market - no dedicated platform offered a comprehensive group study experience with all the features we had envisioned. The Study Spot stands out with its Shared Materials Box, which allows users to upload and access documents, PDFs, and notes directly within the study room. This eliminates the need to send files via email or switch between platforms, facilitating collaboration.
+
+\subsection*{Accessibility \& Relevance}
+Our platform is designed for students of all ages. In recent years, many learners have shifted towards remote studying, and our project provides an interactive alternative by allowing them to stay connected with friends in a structured, virtual study environment.
+
