Clean up Chapter 2

--- a/Report/chapter02--objectives-and-stakeholders.tex
+++ b/Report/chapter02--objectives-and-stakeholders.tex
@@ -1,12 +1,6 @@
 \chapter{Objectives and stakeholders}
 \label{sect:objectives}
 
-\defaultInstructions
-
-\begin{length}
-There are no strict length requirements for this chapter.  However, it is important that the writing is clear and concise.  Avoid repeating yourself.  It is expected that a typical project needs 1--3 pages, but this can vary considerably from project to project.
-\end{length}
-
 \begin{expectations}
 This is a short chapter that identifies the objectives and stakeholders of the project.  A good report also discusses how the different types of stakeholder are affected by the project or how they could be affected by the project.
 
@@ -20,18 +14,32 @@ The section headers below provide a suggested structure.  You should feel free t
 \section{Project objectives}
 \label{sect:objectives}
 
+\begin{itemize}
+    \item \textbf{Facilitate Collaborative Learning:} Enable students to organize and participate in group study sessions effectively.
+    \item \textbf{Enhance Academic Performance:} Support students in understanding complex topics through peer discussions and shared resources.
+    \item \textbf{Build a Learning Community:} Foster a sense of community where students can motivate each other and learn collectively.
+    \item \textbf{Fill the Gap in the Market:} Create a unique platform for seamless group study and resource sharing.
+\end{itemize}
+
 \section{Stakeholder}
 \label{sect:stakeholder}
-\begin{length}
-    Students (Primary Stakeholders)
-        Impact: Benefit directly from improved academic performance, enhanced subject understanding, and increased motivation through collaborative learning.
-        Age Group: The platform accommodates students across all educational stages, from school to university level.
-    Platform Developers and Administrators
-        Impact: Responsible for maintaining website functionality, ensuring data security, and improving user experience. Their work directly affects user satisfaction and engagement.
-\end{length}
+
+\subsection{Key stakeholders}
+\begin{itemize}
+    \item \textbf{Students (Primary Stakeholders):}
+    \begin{itemize}
+        \item \textit{Impact:} Directly benefit from improved academic performance, subject comprehension, and motivation via collaborative learning.
+        \item \textit{Age Group:} Designed for students across all levels (school to university).
+    \end{itemize}
+    
+    \item \textbf{Platform Developers and Administrators:}
+    \begin{itemize}
+        \item \textit{Impact:} Ensure functionality, data security, and user experience; their work dictates engagement and satisfaction.
+    \end{itemize}
+\end{itemize}  
 
 \subsection{Stakeholder analysis}
-\subsection{Key stakeholders}
-\begin{length}
-    The project's success relies on meeting the needs of each stakeholder group. By focusing on students as the primary users, the platform has been designed to be intuitive and engaging. Furthermore, feedback loops from these users will prove essential for continuous improvement. This systematic approach to identifying objectives and understanding stakeholder impact ensures the project remains both user-focused and goal-oriented.
-\end{length}
+As students like ourselves are some of the main stakeholders it was easy to loop in feedback from the team and our peers, which was essential for continuous improvement to the platform.
+
+This systematic approach to identifying objectives and understanding stakeholder impact ensures that the project remains user-focused and goal-oriented.
+
