Add to chapter 4 of report
Signed-off-by: Aamukta Thogata <aamukta.thogata@gmail.com>

--- a/Report/chapter04--project-management.tex
+++ b/Report/chapter04--project-management.tex
@@ -10,11 +10,11 @@ There are no strict length requirements for this chapter.  However, it is import
 \begin{expectations}
 In this chapter, the team must present, reflect on, and evaluate the team's approaches to project management.  This discussion should present the main approaches to project management the team decided to use.  Include the team's rationale for these decisions, and the team's observations on the effectiveness of each approach.
 
-During the project, the team may have made significant changes to project management approaches, or made new decisions where initial arrangements were insufficient.  A typical team will also have encountered difficulties, such as risks that materialised and impacted the team.  Discuss the most critical decisions the team made, why you made them, and what the results were.  If certain approaches were not entirely successful, discuss what you would do differently in a future project.  
+During the project, the team may have made significant changes to project management approaches, or made new decisions where initial arrangements were insufficient.  A typical team will also have encountered difficulties, such as risks that materialised and impacted the team.  Discuss the most critical decisions the team made, why you made them, and what the results were.  If certain approaches were not entirely successful, discuss what you would do differently in a future project.
 
 A good report shows a systematic approach to project management, justifications for key decisions, and a critical reflection on the effectiveness of different approaches.  Ideally, the justifications and reflections in this chapter are based on project management theory.
 
-Note that ``a systematic approach to project management'', ``critical reflection'', and use of ``project management theory'' do not necessary imply that your team's project management approach is a success story.  Thoughful, considered project management improves your chances of success, but projects do not always go according to plan and team's make mistakes.  The markers are looking for 
+Note that ``a systematic approach to project management'', ``critical reflection'', and use of ``project management theory'' do not necessary imply that your team's project management approach is a success story.  Thoughful, considered project management improves your chances of success, but projects do not always go according to plan and team's make mistakes.  The markers are looking for
 \begin{itemize}
     \item Good justifications for approaching a project in a particular way.
     \item Critical reflection on the results, including recognition of problems.
@@ -26,26 +26,41 @@ There is no one best way of organising this content.  One approach is to cover d
 There is also no minimum or maximum number of issues to cover.  Cover what is more important in the depth necessary to do the topic justice.
 \end{expectations}
 
-\section{Project Management Approaches}
-\label{sect: Project Management Approaches}
-\begin{length}
-    Our team adopted an iterative cycle for project management, where tasks were assigned every Monday, progress was reviewed every Friday, and tasks were completed, integrated and reassigned the following Monday. This approach aligns with the principles of Agile Devlopment Process.
-\end{length}
 
-\section{Team Workflow and Decision-Making}
-\label{sect: Team Workflow and Decision-Making}
-\begin{length}
-    We began by brainstorming the list of features we planned to include and determining which would be feasible within the timeframe. The weekly cycles, following Agile methodology, facilitated regular feedback and promoted a continuous iterative process, allowing us to adapt efficiently to challenges and changing requirements. To support this process, we used Trello, where new tasks were assigned.
-\end{length}
+In order to manage this project we split up administrative tasks between the members of the team to ensure that everyone had a role in management and keeping track of the project. We split up the roles as follows:
 
-\section{Reflection on Effectiveness}
-\label{sect: Reflection on Effectiveness}
-\begin{length}
-    The weekly cycles facilitated regular feedback and promoted a continuous iterative process, allowing us to adapt efficiently to challenges and changing requirements. This approach ensured accountability and maintained team coordination, as progress was consistently monitored and discussed. Additionally, the regular review meetings provided opportunities for reflection and improvement, fostering a culture of continuous enhancement.
+\begin{itemize}
+    \item Chair of Meetings and Organiser - Aamukta Thogata
+    \item Trello Board - Prapti Patel
+    \item Github Repo - Yonna Khatri
+    \item Wellbeing Manager - Onessa Crispeyn
+    \item etc....
+\end{itemize}
 
-    Our choice of this approach was influenced by Agile project management theory, which emphasises adaptability, iterative progress, and stakeholder collaboration. By incorporating elements of Scrum—such as iterative cycles and progress reviews—while maintaining flexibility, we effectively balanced structure and adaptability. This systematic approach enabled us to stay aligned with project goals while remaining responsive to new insights and challenges.
+For the duration of the project we kept logs and records of all meetings and all decisions made on Notion. We planned a rough timeline for the project in the first week, and prioritised the features to ensure that we could complete the most important features on time.
 
-    Overall, the iterative cycle proved effective in maintaining team engagement and productivity. However, a more structured Scrum framework, including defined roles (e.g., Scrum Master, Product Owner) and daily stand-ups, could potentially have enhanced communication and problem-solving efficiency. This reflection highlights the importance of adapting project management strategies to the team’s evolving needs and project requirements.
+As a team we spent a lot of time planning and brainstorming before moving onto development ( mostly during winter break ) to ensure we all had a clear vision for what we wanted the project to be and to make sure that we were all on the same page. This was very important to us as we noticed from previous projects that members having different visions can cause problems later on and disagreements or tasks being completed but then becoming redundant.
 
-    Our website is designed to facilitate group revision and study sessions, enabling students to collaborate effectively and enhance their academic performance. The primary objective of the project is to provide a platform that fosters a supportive learning community, encouraging peer-to-peer interaction and knowledge sharing.
-\end{length}
+Before starting coding we also made sure to decide on a good tech stack. We decided to keep using Django for the backend as it was something we were all familiar with after the small group project, and this would enable us to make a good start on the backend in the early weeks. We used this to our advantage and focused on learning React for the frontend as a team during the first few weeks while clearing out most of the easier backend tasks using Django. I think this was very good for our team because it gave us time to learn something new without having to sacrifice going many weeks without actually coding.
+
+We set expectations for the workload and how much we would aim to contribute early on and decided when we would meet each week and have kept this consistent over the last 3 months. Due to this we have all been able to stick to deadlines and have had very litle issues with tasks running over or not being completed.
+
+We also went over some rules which we laid down to ensure that the project development woudl go smoothly. This included rules such as :
+
+
+\begin{itemize}
+    \item We would only push a feature to main AFTER all tests had been written and were fully passing
+    \item We would not ask each other to complete a task in under 48 hours of it being assigned, as to be respectful of each other's time
+    \item We would make sure that where we could our code was fully commented and had guidelines to help others understand
+    \item Add more if you can think of here. ...
+\end{itemize}
+
+Over the course of the last three months we did have some issues.
+
+\begin{itemize}
+    \item Issues with deployment and having to switch to vercel and render from pythonanywhere
+    \item Issues with spotify premium and needing to add free music
+    \item Issues with login and having to add only one login per browser to not mess with the authentication tokens
+    \item Calendar taking a lot longer time than expected but becoming a much bigger and userful feature
+    \item The design of the website evolving as time went on, especially after the advisors feedback
+\end{itemize}
