Finalise Report CH1

--- a/Report/chapter01--introduction.tex
+++ b/Report/chapter01--introduction.tex
@@ -1,16 +1,16 @@
 \chapter{Introduction}
 \label{chap:introduction}
 
-Our project, ‘The Study Spot’, is a virtual study space that students can use to study together with friends.
+Our project, ‘The Study Spot’, is a virtual study space that students can use to study together with friends in a collaborative online environment.
 
-Our primary goal is to enhance student productivity and collaboration by providing features such as creating virtual study rooms, easy sharing of documents, chat rooms, rewards, and shared to-do lists. 
+Our primary goal is to enhance student productivity and teamwork by providing a platform with essential features such as virtual study rooms, document sharing, chat rooms, rewards, a scheduler, and shared to-do lists.
 
-By fostering an interactive and organised study environment, our application will help users maintain focus and subsequently enhance their learning experience.
+By fostering an interactive and organised study environment, our application will help users stay focused, work efficiently and subsequently improve their learning experience.
 
-The end-users, students, will gain from improved time management, healthy competition, and access to a shared study environment, making their study sessions more efficient and enjoyable.
+The end-users, students, will benefit from better time management, healthy competition, and access to a shared study environment, making their study sessions more effective and enjoyable.
 
 \subsection*{Unique Selling Point (USP)}
-During our research, we identified a gap in the market - no dedicated platform offered a comprehensive group study experience with all the features we had envisioned. The Study Spot stands out with its Shared Materials Box, which allows users to upload and access documents, PDFs, and notes directly within the study room. This eliminates the need to send files via email or switch between platforms, facilitating collaboration.
+During our research, we identified a gap in the market - no dedicated platform offered a comprehensive group study experience with all the features we had envisioned. The Study Spot stands out with its Shared Materials Box, which allows users to upload and access documents, PDFs, and notes directly within the study room. This eliminates the need to send files via email or switch between platforms, easing and facilitating collaboration.
 
 \subsection*{Accessibility \& Relevance}
 Our platform is designed for students of all ages. In recent years, many learners have shifted towards remote studying, and our project provides an interactive alternative by allowing them to stay connected with friends in a structured, virtual study environment.
